App_Version 1.0.8 with new feature update

--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -126,7 +126,8 @@
     <string name="notification">Notifications</string>
     <string name="select_state">Select Your State :</string>
     <string name="about_us_title">KRISHI SANJEEVINI is experienced team of agribusiness professionals engaged in grape advisory, plantation and cultivation. Over a period of time, KRISHI SANJEEVINI has developed expertise in cultivation and quality harvesting aspects of grape industry. KRISHI SANJEEVINI is serving grape community using strong technical knowledge and providing timely practical solutions with respect to cultivation as well as processing of resins of grapes. KRISHI SANJEEVINI dedicated working teem mainly focusing on cultivation practices, nutrition management, pest and disease management, quality and yield management and solutions to cultivation related issues. We have also developed and launched KRISHI SANJEEVINI Android agricultural Application exclusively for grape growers to provide timely advisory on cultivation aspects and real time problem solving. To serve the grape industry better, . We have started a dedicated YouTube channel, KRISHI SANJEEVINI Agri Services through which the farmers will be guided through the guidance video for the current issues and solutions.</string>
-    <string name="call_label">Call :+918352317645 </string>
+    <string name="call_label">Call :+917406861266 </string>
+    <string name="call_label2">Call :+918951320059 </string>
     <string name="call_email">krishisanjeevini1@gmail.com</string>
     <string name="default_notification_channel_id">1001</string>
     <string name="spray_schedule">Spray Schedule:</string>
@@ -146,7 +147,7 @@
     <string name="read_accept">Yes I Have Read</string>
     <string name="privacy_title">Privacy Policy</string>
     <string name="privacy_policy">This Privacy Policy governs the privacy terms of the Application called Krishi Sanjeevini , which is owned and operated by Krishi Sanjeevini (“Company”).
-The Application is an integrated online platform consisting of the Company’s platform offering agronomy advisory , awareness of the agriculture products, designed to meet individual farmer’s and agribusiness need and offered by the Company on subscription basis (the "Application").
+The Application is an integrated online platform consisting of the Company’s platform offering agronomy advisory , awareness of the agriculture products, informative videos uploaded in App, designed to meet individual farmer’s and agribusiness need and offered by the Company on subscription basis (the "Application").
 The Services offered on this Application are provided through both online and offline means by the Company
 For the purposes of this Privacy Policy, the terms "we", “our” and "us" refers to Company and its affiliates, and the term "you", “your” or the “user” refers to you, the users downloading or accessing the Application by themselves or on your behalf of a company or any other legal entity and who is creating its account on the Application in accordance with the Terms of Use.
 If you are entering into these Terms on behalf of a company or other legal entity, you represent that you haves the authority to bind such entity to the terms and conditions of these Terms and, in such an event your use of this Application shall refer to use by such legal entity. If you do not have such an authority or do not agree to the terms of this Privacy Policy, then you should refrain from using this Application.
